--- a/client/index.html
+++ b/client/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="shortcut icon" href="icon.png" type="image/x-icon" />
     <meta charset="UTF-8" />
     <meta
       name="viewport"
